--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <title>NetShaper - 控制面板</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/experiment-config.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -444,5 +445,6 @@
     <!-- 脚本加载 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/dashboard.js"></script>
+    <script src="js/experiment-config.js"></script>
 </body>
 </html> 
