--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NetShaper - 差分隐私流量整形保护者</title>
+    <title>DP-shield - 基于差分隐私的网络侧信道防护系统</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -13,14 +13,14 @@
     
     <div class="main-container">
         <div class="logo-container">
-            <h1 class="logo-text">隐信流塑 </h1>
-            <p class="slogan">您的流量隐私保护者</p>
-            <p class="english-slogan">The newest system to detect your plugins</p>
+            <h1 class="logo-text">DP-shield</h1>
+            <p class="slogan">基于差分隐私的网络侧信道防护系统</p>
+            <p class="english-slogan">The newest system to protect your privacy</p>
         </div>
 
         <div class="form-container" id="login-form">
             <div class="form-header">
-                <h2>隐信塑流</h2>
+                <h2>登录</h2>
             </div>
             <form id="login">
                 <div class="input-group">
